5.3.0-FORK (02-09-2024)
- Improvement: Ensures Release Notes is in the jar [#qubIT-Omnis-6579]
- Improvement: Updates guava from 21.0 to 33.2.1-jre [#qubIT-Omnis-5869]

5.2.0-FORK (17-06-2024)
- Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]

5.1.0-FORK (23-04-2024)
- Refactor: Remove bennu-spring dependency [#qubIT-Omnis-5753]

5.0.0-FORK (17-04-2024)
- Refactor: Remove deprecated UI controllers and views [#qubIT-Omnis-5753]
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

4.1.0-FORK (08-08-2022)
- Refactor: Add interface SpaceOccupation

4.0.1-FORK (02-03-2021)
- Bug fix: Fixed inactive metadataspecs being evaluated during space update

4.0.0-FORK (04-01-2021)
- Forked